--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!--Link to Reset Stylesheet CSS-->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <!--Link to Javascript Stylesheet JS-->
-    <script src="assets/javascript/app.js"></script>
+    <script defer src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script defer src="assets/javascript/app.js"></script>
 
     <!--Link to Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -40,9 +41,8 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;" id="map">
-            <div class="card-body">
-            </div>
+        <div class="card" id="map">
+
         </div>
 
 
