most recent changes

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" id="bg-img">
 
-        <div class="container-fluid" id="bg-img">
+        <div class="container-fluid">
             <div class="container">
                 <div id="logo"><img src="assets/images/logo_v1.png" id="help"></div>
                 <br>
@@ -41,12 +41,19 @@
                 
             </div>
         </div>
-
+</div>
    
     <div class="container-fluid" id="anchor1">
         <input id="pac-input" class="controls" type="text">
         <div id="map"></div>
+        <div id="scroll"><a href="#anchor2" class="scrollLink"><div class="button"><button class="btn btn-secondary btn-lg" type="button" id="button-about">About help</button></div></a></div>
     </div>
+
+
+<div class="container-fluid" id="anchor2">
+    <img src="assets/images/mock.png" id="mock">
+
+
 </div>
 
 
