--- a/index.html
+++ b/index.html
@@ -25,23 +25,55 @@
     <!--Link to Stylesheet CSS-->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 
+    <!--Link to Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+
+
+        <!-- IE doesn't do CSS3 Animations, so let's put in some JS code to fix. -->
+        
+        <!-- <script type="text/javascript" src="/shared/js/jquery-1.7.2.min.js"></script>    
+        <script type="text/javascript" src="js/transition-circle-ie.js"></script>     -->
+
+
+
 </head>
 
 <body>
     <div class="container-fluid" id="bg-img">
 
+        <!-- Image and text -->
+
+
+        <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">help</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Gotta Go!<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About help</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">"Reading Material"</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+
         <div class="container-fluid">
-            <div class="container">
+            <!-- <div class="container"><div id='fly'></div> -->
+
                 <div id="logo"><img src="assets/images/logo_v1.png" id="help"></div>
                 <br>
-                <p id="quote">Sht Happens. Roll with it.</p>
-                <div id="scroll"><a href="#anchor1" class="scrollLink"><div class="button"><button class="btn btn-light" type="button" id="button-addon2">Public Restrooms
+                <p id="quote">Know Where to GO.</p>
+                <div id="scroll"><a href="#anchor1" class="scrollLink"><div class="button"><button class="btn btn-light" type="button" id="button-addon2">Restrooms
                         Near Me <i class="fa fa-search"></i></button></div></a></div>
-
-                
             </div>
         </div>
-</div>
    
     <div class="container-fluid" id="anchor1">
         <input id="pac-input" class="controls" type="text">
