map width changed

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h3 class="text-center" id="map-title">The Crap Map</h3>
 
 
-        <div id="map"><!--<input id="pac-input" class="controls" type="text">--></div>
+        <div id="map" style="width:100%;"><!--<input id="pac-input" class="controls" type="text">--></div>
         <div class="reading" id="scroll"><a href="#anchor2" class="scrollLink"><button class="btn btn-outline-light" type="button" id="button-read">"Reading Material"</button></a></div>
 
     </div>
