--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
     <div class="container-fluid" id="anchor1">
             <h3 class="text-center" id="map-title">The Crap Map</h3>
 
+            <!--Map-->
 
-        <div id="map"><!--<input id="pac-input" class="controls" type="text">--></div>
+        <div id="map" style="width:100%;"><!--<input id="pac-input" class="controls" type="text">--></div>
         <div class="reading" id="scroll"><a href="#anchor2" class="scrollLink"><button class="btn btn-outline-light" type="button" id="button-read">"Reading Material"</button></a></div>
 
     </div>
