last changes, bios updated, spacing fixed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#anchor1" id="button-find-2">The Crap Map</a>
+          <a class="nav-link" href="#anchor1" id="button-find-2">Where to Wee</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#anchor2">"Reading Material"</a>
@@ -76,7 +76,7 @@
     <div id="logo"><img src="assets/images/pee.png" id="help"></div>
     <br>
     <p>
-      <span id="quote">K<span id="no">no</span>w <span id="where">where</span> to go.</span>
+      <span id="quote">K<span id="no">no</span>w <span id="where">where</span> to go...</span>
     </p>
     <div class="find" id="scroll"><a href="#anchor1" class="scrollLink">
         <button class="btn btn-outline-light" type="button" id="button-find">Restrooms
@@ -87,7 +87,7 @@
   </div>
 
   <div class="container-fluid" id="anchor1">
-    <h3 class="text-center" id="map-title">The Crap Map</h3>
+    <h3 class="text-center" id="map-title">Where to Wee...</h3>
 
     <!--Map-->
 
@@ -150,14 +150,17 @@
         <div class="col-sm">
           <div id="igor"><img src="assets/images/igor.png" id="bio"></div>
           Igor
+          <p id="info">Igor lives in Seattle and is an accomplished chemist, working on pivoting into a career as a web developer. He is skilled in back end work and hopes to take the skills he has learned in this course to a company like google.</p>
         </div>
         <div class="col-sm">
           <div id="kelly"><img src="assets/images/kelly.png" id="bio"></div>
           Kelly
+          <p id="info">Kelly lives on Mercer Island and is an important part of the automobile advertising industry. She is an extremely skilled graphic designer which powers her passion for front end web development. The foundations that she masters in this course will certainly pay dividends and help her transition into a career where she can use her artistic creativity and web development expertise.</p>
         </div>
         <div class="col-sm">
           <div id="james"><img src="assets/images/james.png" id="bio"></div>
           James
+          <p id="info">James is in software sales and lives on Mercer Island. He is taking this course to add a more technical background to his current skillset to accelerate his career into a more advanced management position.</p>
         </div>
       </div>
     </div>
@@ -165,11 +168,7 @@
     <!--Short description about the app-->
 
     <div class="container" id="stats">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
+      <p>Sign up for the Help Newsletter! In our weekly newsletter (coming soon) we will give our HelpHeads a crap-load of interesting facts, funny joke, and quirky anecdotes to entertain your family and friends. Stay tuned for other features which will soon be announced!</p>
     </div>
 
     <!--Form-->
