--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <!--Short description about the app-->
 
     <div class="container" id="stats">
-      <p>Sign up for the Help Newsletter! In our weekly newsletter (coming soon) we will give our HelpHeads a crap-load of interesting facts, funny joke, and quirky anecdotes to entertain your family and friends. Stay tuned for other features which will soon be announced!</p>
+      <p>Sign up for the Help Newsletter! In our weekly newsletter (coming soon) we will give our HelpHeads a crap-load of interesting facts, funny jokes, and quirky anecdotes to entertain your family and friends. Stay tuned for other features which will soon be announced!</p>
     </div>
 
     <!--Form-->
